syntax = "proto3";

package common;

import "koinos/options.proto";

message str {
   string value = 1;
}
 
message uint32 {
   uint32 value = 1;
}
 
message uint64 {
   uint64 value = 1 [jstype = JS_STRING];
}

message boole {
   bool value = 1;
}

message address {
   bytes value = 1 [(koinos.btype) = ADDRESS];
}

message list_args {
   bytes start = 1 [(koinos.btype) = ADDRESS];
   int32 limit = 2;
   bool descending = 3;
}

message addresses {
   repeated bytes accounts = 1 [(koinos.btype) = ADDRESS];
}